add clearing records in storage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,7 +20,8 @@
       "run_at": "document_end",
       "js": [
         "content.js"
-      ]
+      ],
+      "type": "module"
     }
   ],
   "action": {
