--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     }
   ],
   "compilerOptions": {
-    "target": "ES2020",
     "module": "ESNext",
+    "target": "ESNext",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
