--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,20 @@
   ],
   "compilerOptions": {
     "module": "ESNext",
+    "moduleResolution": "Node",
+    "types": [
+      "chrome"
+    ],
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "target": "ESNext",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "rootDir": "./src",
+    "outDir": "./dist"
   }
 }
