--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "homepage_url": "https://t.me/shtopor_org",
   "icons": {
     "32": "icon-32.png",
-    "128": "icon-192.png"
+    "192": "icon-192.png"
   },
   "background": {
     "service_worker": "background.js",
@@ -18,7 +18,7 @@
       "matches": [
         "https://*.yonote.ru/doc/*"
       ],
-      "run_at": "document_end",
+      "run_at": "document_idle",
       "js": [
         "content.js"
       ]
@@ -31,6 +31,7 @@
     "https://*.yonote.ru/doc/*"
   ],
   "permissions": [
+    "webNavigation",
     "activeTab",
     "storage",
     "scripting"
