--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "ESNext"
     ],
     "target": "ESNext",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
